--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,11 @@ script:
 - ansible-playbook tests/$PLAYBOOK -i tests/inventory --syntax-check
 
 # Initial run
-- ansible-playbook tests/$PLAYBOOK -i tests/inventory --connection=local --become -e ansible_python_interpreter=/home/travis/virtualenv/python2.7.12/bin/python2.7
+- ansible-playbook tests/$PLAYBOOK -i tests/inventory --connection=local --become
 
 # Run the role/playbook again, checking to make sure it's idempotent.
 - >
-  ansible-playbook tests/$PLAYBOOK -i tests/inventory --connection=local --become -e ansible_python_interpreter=/home/travis/virtualenv/python2.7.12/bin/python2.7
+  ansible-playbook tests/$PLAYBOOK -i tests/inventory --connection=local --become
   | grep -q 'changed=0.*failed=0'
   && (echo 'Idempotence test: pass' && exit 0)
   || (echo 'Idempotence test: fail' && exit 1)
