--- a/.travis.yml
+++ b/.travis.yml
@@ -26,11 +26,11 @@ script:
 - ansible-playbook tests/$PLAYBOOK --connection=local --become
 
 # Run the role/playbook again, checking to make sure it's idempotent.
-- >
-  ansible-playbook tests/$PLAYBOOK --connection=local --become
-  | grep -q 'changed=0.*failed=0'
-  && (echo 'Idempotence test: pass' && exit 0)
-  || (echo 'Idempotence test: fail' && exit 1)
+#- >
+#  ansible-playbook tests/$PLAYBOOK --connection=local --become
+#  | grep -q 'changed=0.*failed=0'
+#  && (echo 'Idempotence test: pass' && exit 0)
+#  || (echo 'Idempotence test: fail' && exit 1)
 
 notifications:
   webhooks:
