--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,9 +4,8 @@
     url: https://my-netdata.io/kickstart-static64.sh
     dest: /tmp/kickstart-static64.sh
     mode: 0440
-  delegate_to: 127.0.0.1
 - name: "[netdata] Install netdata package"
-  script: "/tmp/kickstart-static64.sh --stable-channel --dont-wait"
+  command: "bash /tmp/kickstart-static64.sh --stable-channel --dont-wait"
 - name: "[netdata] Copy netdata.conf"
   template:
     src: "netdata.conf.j2"
