cleanup after install

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,6 +6,10 @@
     mode: 0440
 - name: "[netdata] Install netdata package"
   command: "bash /tmp/kickstart-static64.sh --stable-channel --dont-wait"
+- name: "[netdata] Cleanup Netdata Kickstart"
+  file:
+    path: /tmp/kickstart-static64.sh
+    state: absent
 - name: "[netdata] Copy netdata.conf"
   template:
     src: "netdata.conf.j2"
