add alarm for refused connections

--- a/files/nginx_errorlog.conf
+++ b/files/nginx_errorlog.conf
@@ -1,11 +1,11 @@
-template: 1m_error_inc
+template: 1m_connection_refused
       on: nginx.errors
 families: *
-  lookup: sum -1m of error
+  lookup: sum -1m of Refused
    units: errors
    every: 10s
-    warn: ($this > 3)
-    crit: ($this > 5)
+    warn: ($this > 1)
+    crit: ($this > 3)
    delay: down 15m multiplier 1.5 max 1h
-    info: error-log entries written in the last minute
+    info: Refused connections in the last minute
       to: webmaster
