different contexts for different charts

--- a/files/nginx_errorlog.conf
+++ b/files/nginx_errorlog.conf
@@ -1,5 +1,5 @@
 template: 1m_connection_refused
-      on: nginx.errors
+      on: nginx.error_types
 families: *
   lookup: sum -1m of Refused
    units: errors
