switch from dictionary variables to underscore

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,5 @@
 ---
-netdata:
-  bind_ip: 127.0.0.1  
-  url: 127.0.0.1
-  validate_certs: yes
+netdata_bind_ip: 127.0.0.1  
+netdata_url: 127.0.0.1
+netdata_validate_certs: yes
 
