--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,34 +1,34 @@
 ---
-- name: "[netdata] Download Netdata Kickstart"
+- name: "Download Netdata Kickstart"
   get_url:
     url: https://my-netdata.io/kickstart.sh
     dest: /tmp/kickstart.sh
     mode: 0440
-- name: "[netdata] Install netdata package"
+- name: "Install netdata package"
   command: "bash /tmp/kickstart.sh --stable-channel --disable-telemetry --dont-wait"
-- name: "[netdata] Cleanup Netdata Kickstart"
+- name: "Cleanup Netdata Kickstart"
   file:
     path: /tmp/kickstart.sh
     state: absent
-- name: "[netdata] Copy netdata.conf"
+- name: "Copy netdata.conf"
   template:
     src: "netdata.conf.j2"
     dest: "/etc/netdata/netdata.conf"
     mode: 0644
   notify: ['Restart Netdata service']
-- name: "[netdata] Copy health_alarm_notify.conf"
+- name: "Copy health_alarm_notify.conf"
   template:
     src: "health_alarm_notify.conf.j2"
     dest: "/etc/netdata/health_alarm_notify.conf"
     mode: 0644
   notify: ['Restart Netdata service']
-- name: "[netdata] Get API Key"
+- name: "Get API Key"
   slurp:
     src: /var/lib/netdata/netdata.api.key
   register: apikey
   tags:
   - silence
-- name: "[netdata] Reset all alarms"
+- name: "Reset all alarms"
   uri:
     url: "{{ netdata_url }}api/v1/manage/health?cmd=RESET"
     headers:
@@ -39,7 +39,7 @@
   when: netdata_registry_hostname is defined
   tags:
   - silence
-- name: "[netdata] Silence alarms"
+- name: "Silence alarms"
   uri:
     url: "{{ netdata_url }}api/v1/manage/health?cmd=SILENCE&{{ item }}"
     headers:
@@ -52,7 +52,7 @@
   tags:
   - silence
 
-- name: "[netdata] Check if nginx is installed"
+- name: "Check if nginx is installed"
   package:
     name: nginx
     state: present
@@ -60,35 +60,35 @@
   failed_when: false
   register: nginx_check
 
-- name: "[netdata] Copy nginx error log plugin"
+- name: "Copy nginx error log plugin"
   copy:
     src: "nginx_errorlog.chart.py"
     dest: "/usr/libexec/netdata/python.d/nginx_errorlog.chart.py"
     mode: 0644
   when: not nginx_check.changed
 
-- name: "[netdata] Copy nginx error log plugin health config"
+- name: "Copy nginx error log plugin health config"
   copy:
     src: "nginx_errorlog.conf"
     dest: "/usr/lib/netdata/conf.d/health.d/nginx_errorlog.conf"
     mode: 0644
   when: not nginx_check.changed
 
-- name: "[netdata] Copy nginx error log plugin job config"
+- name: "Copy nginx error log plugin job config"
   template:
     src: "nginx_errorlog.conf.j2"
     dest: "/etc/netdata/python.d/nginx_errorlog.conf"
     mode: 0644
   when: not nginx_check.changed
 
-- name: "[netdata] Copy web log plugin job config"
+- name: "Copy web log plugin job config"
   template:
     src: "web_log.conf.j2"
     dest: "/etc/netdata/python.d/web_log.conf"
     mode: 0644
   when: not nginx_check.changed
 
-- name: "[netdata] Copy updates collector"
+- name: "Copy updates collector"
   copy:
     src: "updates.chart.sh"
     dest: "/usr/libexec/netdata/charts.d/updates.chart.sh"
