--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -83,10 +83,16 @@ netdata_config:
 #        update every = 1
 #        command options = 
 
-# Claim to Netdata Cloud
-# Uncomment and fill to activate:
+# Set Netdata Cloud claiming details. To find your `netdata_claim_token` and
+# `netdata_claim_room`, go to Netdata Cloud, then click on your Space's name in the top
+# navigation, then click on `Manage your Space`. Click on the `Nodes` tab in the
+# panel that appears, which displays a script with `token` and `room` strings.
+# Copy those strings into the variables below. `netdata_claim_url` should be
+# `https://app.netdata.cloud`. Read more:
+# https://learn.netdata.cloud/docs/agent/claim
 #netdata_claim_token:
 #netdata_claim_room: 
+netdata_claim_url: "https://app.netdata.cloud"
 netdata_claim_reclaim: no
 
 ## MODs:
