update claim to add uuid if required and fix claim

--- a/tasks/claim.yml
+++ b/tasks/claim.yml
@@ -19,6 +19,11 @@
 - name: Re-claim a node to Netdata Cloud
   block:
 
+    - name: Install uuid-runtime
+      ansible.builtin.package:
+        name: uuid-runtime
+        state: present
+        
     - name: Ensure `uuidgen` is installed
       stat:
         path: /usr/bin/uuidgen
